Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-32

Warnings under new version of xcode on MacOS.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • None
    • None

    Description

      The error on the build is:

      [ 82%] Building CXX object c++/src/CMakeFiles/orc.dir/Reader.cc.o
      In file included from /Users/owen/work/code/orc/c++/src/Reader.cc:29:
      In file included from /Users/owen/work/code/orc/c++/src/wrap/coded-stream-wrapper.h:28:
      /Users/owen/work/code/orc/c++/libs/protobuf-2.6.0/src/google/protobuf/io/coded_stream.h:110:9: error:
            macro name is a reserved identifier [-Werror,-Wreserved-id-macro]
      #define GOOGLE_PROTOBUF_IO_CODED_STREAM_H__
              ^
      /Users/owen/work/code/orc/c++/src/Reader.cc:1074:48: error: implicit conversion
            changes signedness: 'long long' to 'uint64_t' (aka 'unsigned long long')
            [-Werror,-Wsign-conversion]
              selectType(schema->getSubtype(*columnId-1));
                         ~~~~~~             ~~~~~~~~~^~
      /Users/owen/work/code/orc/c++/src/Reader.cc:1083:26: error: implicit conversion
            changes signedness: 'int64_t' (aka 'long long') to 'size_type'
            (aka 'unsigned long') [-Werror,-Wsign-conversion]
          if (!selectedColumns[type.getColumnId()]) {
               ~~~~~~~~~~~~~~~ ^~~~~~~~~~~~~~~~~~
      /Users/owen/work/code/orc/c++/src/Reader.cc:1084:23: error: implicit conversion
            changes signedness: 'int64_t' (aka 'long long') to 'size_type'
            (aka 'unsigned long') [-Werror,-Wsign-conversion]
            selectedColumns[type.getColumnId()] = true;
            ~~~~~~~~~~~~~~~ ^~~~~~~~~~~~~~~~~~
      4 errors generated.
      make[2]: *** [c++/src/CMakeFiles/orc.dir/Reader.cc.o] Error 1
      make[1]: *** [c++/src/CMakeFiles/orc.dir/all] Error 2
      make: *** [all] Error 2
      

      Attachments

        Issue Links

          Activity

            People

              omalley Owen O'Malley
              omalley Owen O'Malley
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: