ORC-32. Fix warnings under MacOS. (omalley)

closes apache/orc#11